# plutus-verify

./: .gitignore  CHANGELOG.md  GUIDELINE.md  README.md  plutus-verify-ollama.yaml  pyproject.toml
docs/capture/plutus-scoring/: 2026-06-29-1549-decision-score-reference-only.md
docs/capture/plutus-standardize/: 2026-06-29-tier2-drive-and-dockerignore-gotchas.md
docs/capture/plutus-transform/: 2026-06-29-1449-bug-fix-gt10-venv-ambiguity.md
docs/capture/reproducible-env-uv/: 2026-06-18-1701-brain-dump.md  2026-06-18-1719-bug-fix.md
docs/capture/sdk-install/: plutus-verify-sdk-install-bug.md
docs/capture/snapshot-check-flow/: 2026-06-28-read-only-verify-implementation.md  2026-06-29-1338-complete.md
docs/capture/snapshot-check-flow-redesign/: 2026-06-29-1352-brain-dump.md
docs/completion-report/: 2026-05-25-phase-a-v2-manifest-format.md  2026-05-26-schema-polish-and-fixes.md  2026-05-26-simplify-pass.md  2026-05-27-v0.2.7-byte-fallback-and-skill-split.md  2026-05-29-v0.2.10-runtime-mount-staging.md  README.md
docs/design/: build-and-execute.md  comparison-and-reporting.md  extraction.md  secret-and-leak-hardening.md  skill-layer.md  v2-spec-and-execution.md  verification-pipeline.md
docs/feature/: authoring-tools.md  legacy-migration.md  plutus-scoring-skill.md  plutus-standardize-skill.md  plutus-transform-skill.md  repo-verification.md  reproducible-env.md  v2-manifest.md
docs/handoff/: protomarketmaker-upgrade.md
docs/others/: USER_GUIDES.md  ollama-knowledge-base.md  protomarketmaker-upgrade.md
docs/plan/: 2026-05-15-plutus-verify-design.md  2026-05-20-plutus-spec-v2-foundation.md  2026-05-21-plutus-spec-v2-DONE.md  2026-05-21-plutus-spec-v2-legacy-transfer.md  2026-05-21-plutus-spec-v2-live-verification.md  2026-05-21-plutus-spec-v2-native-execution.md  2026-05-21-plutus-spec-v2-results-contract.md  2026-05-21-plutus-spec-v2-scaffold-cli.md  2026-05-22-plutus-package-and-sdk-in-docker.md  2026-05-22-plutus-snapshot-headlines.md  2026-05-25-plutus-verifier-integrity.md  2026-05-25-plutus-verify-mvp-simplify-pass.md  2026-05-27-skill-design-v1-to-v2-transformer.md  2026-05-27-v0.2.7-artifact-baseline-byte-fallback.md  snapshot-check-flow-redesign.md
docs/runbook/: publishing-to-pypi.md
docs/superpowers/plans/: 2026-06-28-plutus-document-and-standardize-rename.md  2026-06-28-ship-readiness-0.5.0-docs-and-skill.md
docs/superpowers/specs/: 2026-06-17-manifest-data-prep-sub-processes-design.md  2026-06-28-plutus-document-and-standardize-rename-design.md
plutus_verify/: __init__.py  __main__.py  config.py  constants.py  execute.py  fetch.py  ingest.py  pipeline.py  runner_docker.py
plutus_verify/_bundled/: .gitignore  __init__.py
plutus_verify/builder/: __init__.py  dockerfile.py  fixers.py  llm_fixer.py  runner.py
plutus_verify/compare/: charts.py  llm_match.py  metrics.py  rubric.py  vision_client.py
plutus_verify/extract/: __init__.py  client.py  decompose.py  plan.py  stitch.py  templates.py  validator.py
plutus_verify/report/: __init__.py
plutus_verify/scaffold/: __init__.py  bootstrap.py  check.py  check_report.py  extract_to_v2.py  init.py  manifest_edit.py  manifest_template_todo.py  snapshot.py  templates.py  transfer.py
plutus_verify/sdk/: __init__.py  run.py  schema.py
plutus_verify/spec/: __init__.py  adapter.py  loader.py  manifest.py  schema.py  validator.py
plutus_verify/spec/runtime/: __init__.py  artifact_compare.py  data_resolver.py  dockerfile_gen.py  orchestrator.py  preflight.py  real_image_builder.py  refcompare.py  results.py  sdk_bundle.py  staging.py
plutus_verify/util/: __init__.py  json_io.py  llm_parsing.py  progress.py
scripts/: release-build.sh
skills/plutus-document/: README.md  SKILL.md  install.sh
skills/plutus-document/references/: readme-template.md  section-map.md
skills/plutus-scoring/: README.md  SKILL.md  install.sh
skills/plutus-standardize/: README.md  SKILL.md  install.sh
skills/plutus-transform/: README.md  SKILL.md  install.sh
tests/integration/: test_gold_repo_smoke.py  test_install_project_e2e.py  test_runtime_staging_e2e.py  test_spec_e2e.py  test_v2_runtime_e2e.py
tests/unit/: conftest.py  test_build_fixers.py  test_build_llm_fixer.py  test_build_retry.py  test_check_report.py  test_cli_bootstrap.py  test_cli_group.py  test_cli_snapshot.py  test_cli_transfer.py  test_compare_charts.py  test_compare_metrics.py  test_config.py  test_env_uv_lockfile.py  test_execute.py  test_extract.py  test_extract_decompose.py  test_extract_stitch.py  test_extract_to_v2.py  test_fetch.py  test_ingest.py  test_llm_client.py  test_llm_match.py  test_manifest_edit.py  test_orchestrator_secrets.py  test_pipeline.py  test_pipeline_routes_v2_runtime.py  test_pipeline_spec_detection.py  test_plan_schema.py  test_plan_validator.py  test_progress.py  test_report.py  test_rubric.py  test_runner_docker.py  test_runtime_artifact_compare.py  test_runtime_data_resolver.py  test_runtime_dockerfile_gen.py  test_runtime_orchestrator.py  test_runtime_preflight.py  test_runtime_real_image_builder.py  test_runtime_refcompare.py  (+18 more)
(+52 files in other folders)
