[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "plutus-verify"
version = "0.1.0"
description = "Automated reproducibility verifier for PLUTUS-standard trading algorithm repos"
requires-python = ">=3.11"
dependencies = [
  "click>=8.1",
  "pyyaml>=6.0",
  "jsonschema>=4.20",
  "jsonpath-ng>=1.6",
]

[project.optional-dependencies]
llm = ["openai>=1.40"]
runner = ["docker>=7.0", "jupyter-repo2docker>=2024.3"]
charts = ["cairosvg>=2.7", "pillow>=10.0"]
dev = ["pytest>=8.0", "pytest-cov>=4.1"]

[project.scripts]
plutus-verify = "plutus_verify.__main__:main"
plutus = "plutus_verify.__main__:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["plutus_verify*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"
